<resources>
    <string name="app_name">CarCenter</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_map">Map</string>
    <string name="title_vehicale">Vehicles</string>
    <string name="title_settings">Settings</string>
    <string name="title_history_vecicles">Vehicles History</string>
    <string name="account_information_menu">Account information</string>
    <string name="change_language_menu">Change language</string>
    <string name="logout">Log out</string>
    <string name="title_car_info">Car Information</string>
    <string name="txt_your_code">is your car code</string>
    <string name="txt_card_plate">Card plate</string>
    <string name="txt_vehicle_type">Vehicle type</string>
    <string name="txt_vehicle_model">Vehicle Model</string>
    <string name="txt_oil_type">Oil type</string>
    <string name="txt_oil_brand_name">Oil Brand Name</string>
    <string name="txt_oil_viscosity">Oil Viscosity</string>
    <string name="txt_branch_name">Branch Name</string>
    <string name="txt_search">Search</string>
    <string name="select_language">Select language</string>
    <string name="arabic">Arabic</string>
    <string name="txt_english">English</string>
    <string name="txt_welcome_at_kabrit">Welcome at Kabrit</string>
    <string name="txt_skip">Skip</string>
    <string name="txt_select_service">Select Service Center</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_title_login">Hello again</string>
    <string name="txt_sign_into_login">Sig in to your account</string>
    <string name="txt_user_name">User Name</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">login</string>
    <string name="txt_directions">Directions</string>
    <string name="txt_call">Call</string>
    <string name="txt_account_information">Account information</string>
    <string name="txt_phone_number">Phone Number</string>
    <string name="txt_change"><u>Change</u></string>
    <string name="txt_save_change">Save Changes</string>
    <string name="txt_change_password">Change password</string>
    <string name="txt_current_password">Current password</string>
    <string name="txt_new_password">New password</string>
    <string name="txt_confirm_password">Confirm new password</string>
    <string name="txt_lets_start">Let’s start</string>
    <string name="txt_chnge_lang">Change language</string>
    <string name="save_succefully">"Change saved successfully "</string>
    <string name="verify_logout">"Are you sure loagout "</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_message_change_language">Are you sure change language?</string>
    <string name="billTo">Bill to\n</string>
    <string name="billFrom">Bill from</string>
    <string name="title_name">Item name</string>
    <string name="title_Qt">Qty</string>
    <string name="title_price">price</string>
    <string name="title_total">Total</string>
    <string name="title_subtotal">subtotal</string>
    <string name="title_tax">Tax\n</string>
    <string name="title_kilometers">Kilometeres</string>
    <string name="title_picture">Pictures\n</string>
</resources>