<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_history">

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.tama.car_center.home.vehicle.VehiclesHistoryFragment"
        android:label="@string/title_history_vecicles"
        tools:layout="@layout/fragment_history_vechicals" />


    <fragment
        android:id="@+id/navigation_vechicals"
        android:name="com.tama.car_center.home.vehicels.VehicalsFragment"
        android:label="@string/title_vehicale"
        tools:layout="@layout/fragment_vehicals" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.tama.car_center.home.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>