<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.tama.car_center.onboarding.OnboardingViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.OnboardingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        style="@style/TextStyleLight"
        tools:text="@string/txt_skip"
        android:text="@string/txt_skip"
        android:id="@+id/skip"
        android:onClick="@{(v)->viewModel.onClickGoLogin.invoke(v)}"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_100dp"
        app:layout_constraintBottom_toTopOf="@+id/contin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/skip">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/dimen_15dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ic_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_city_car"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_selection"
                style="@style/MeduimTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_100dp"
                android:text="@string/txt_select_service"
                android:textSize="@dimen/ts_20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ic_city" />

            <TextView
                style="@style/LightTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:gravity="center"
                android:padding="@dimen/dimen_7dp"
                android:text="Proin ex ipsum, facilisis id tincidunt sed, vulputate in lacus. Donec pharetra faucibus leo, vitae vestibulum leo scelerisque eu. Nam enim dolor, porta at ex ut, eleifend tristique metus. Integer sit amet auctor ligula, vel dictum orci."
                app:layout_constraintEnd_toEndOf="@id/ic_city"
                app:layout_constraintStart_toStartOf="@id/ic_city"
                app:layout_constraintTop_toBottomOf="@id/title_selection" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:id="@+id/contin"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_height="wrap_content"
        style="@style/PrimaryWhiteButton"
        android:text="@string/txt_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="@{(v)->viewModel.onClickGoLogin.invoke(v)}"
        android:layout_marginBottom="@dimen/dimen_10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>